# sqlplot-rs

./: Cargo.toml  README.md
sqlplot-rs/: Cargo.toml
sqlplot-rs-core/: Cargo.toml
sqlplot-rs-core/src/: lib.rs
sqlplot-rs-derive/: Cargo.toml
sqlplot-rs-derive/src/: lib.rs
sqlplot-rs-derive/tests/: compile_tests.rs  gen_result_line_test.rs  rename_test.rs  skip_test.rs
sqlplot-rs-derive/tests/test_code/: invalid_rename_non_ascii_test.rs  invalid_rename_non_ascii_test.stderr  invalid_rename_special_char_test.rs  invalid_rename_special_char_test.stderr  invalid_skip_argument_test.rs  invalid_skip_argument_test.stderr  macro_def_test.rs  skip_compile_test.rs  trait_exists_test.rs
sqlplot-rs/src/: main.rs  parsing.rs
