[package]
name = "sqlplot-rs-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
syn = { version = "2", features = ["full"]}
quote = "1.0.23"
proc-macro2 = "1.0.51"
itertools = "0.10.5"
sqlplot-rs-core = { path = "../sqlplot-rs-core" }

[dev-dependencies]
trybuild = "1.0.77"
