[package]
name = "sqlplot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlplot-rs-core = { path = "../sqlplot-rs-core" }
sqlplot-rs-derive = { path = "../sqlplot-rs-derive" }
sqlite = "0.30.4"
nom = "7"